--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,17 @@ button:hover {
 button:active {
   background-color: rgba(255, 255, 255, 0.2);
 }
+
+a {
+  color: white;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+a:active {
+  background-color: rgba(255, 255, 255, 0.1);
+}
